Fixes to header spacing.  Fixes to icon manifest

--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,35 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    padding: 10px;
+    gap: 60px;
 }
 
 .App-link {
     color: #61dafb;
 }
 
+.headerLogo {
+    flex-shrink: 1;
+}
+
+.headerControls {
+    flex-grow: 4;
+    max-width: 80%;
+}
+
 .kblogo {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
+    flex-grow: 1;
+}
+
+.techniqueFilter {
+    width: 100%;
+}
+
+.beltFilter {
+    width: 100%
 }
 
 .techniqueList {
